--- a/front-end/signUpView.html
+++ b/front-end/signUpView.html
@@ -25,13 +25,6 @@
         </div>
         <div class="collapse navbar-collapse">
             <!-- Partial view place -->
-            <ul class="nav navbar-nav pull-right">
-                <li>
-                    <a href="#">
-                        Назад
-                    </a>
-                </li>
-            </ul>
             <!-- Partial view place -->
         </div>
     </div>
@@ -113,15 +106,6 @@
                             <div class="col-sm-12">
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox" data-bind="checked: isTeacherAccountRequired"> Получить преподавательский аккаунт
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-12">
-                                <div class="checkbox">
-                                    <label>
                                         <input type="checkbox" data-bind="checked: rememberMe"> Запомнить меня
                                     </label>
                                 </div>
@@ -130,6 +114,15 @@
                         <div class="form-group">
                             <div class="col-sm-12">
                                 <button type="submit" class="btn btn-default">Зарегистрироваться</button>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <div class="checkbox">
+                                    <label>
+                                        <a href="" data-bind="click: isTeacherAccountRequired">Как получить преподавательский аккаунт?</a>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </form>
