--- a/front-end/signInView.html
+++ b/front-end/signInView.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Senseira : Sign In</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="css/reset.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
     <link type="text/css" rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
     <link type="text/css" rel="stylesheet" href="css/bootstrap/bootstrap-theme.css"/>
-    <link type="text/css" rel="stylesheet" href="css/core.css">
+    <link type="text/css" rel="stylesheet" href="css/core.css"/>
+    <link type="text/css" rel="stylesheet" href="css/animate.css"/>
     <script type="text/javascript" src="scripts/frameworks/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="scripts/frameworks/knockout-3.4.0.js"></script>
+    <script type="text/javascript" src="scripts/frameworks/jquery.noty.packaged.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap/bootstrap.js"></script>
+    <script type="text/javascript" src="scripts/custom/alert.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -30,6 +33,7 @@
     </div>
 </nav>
 <div class="container main-container body-content">
+
     <!-- Partial view place -->
     <div id="signInView" class="sign-in-container clearfix">
 
