SE-17 Create all pages for authorization.
Following pages created:

1) insidePasswordChangingView.html
2) outsidePasswordChangingView.html
3) resetPasswordView.html
4) emailConfirmationView.html

Some JavaScript code was refactored.
Server side alerting was added.

--- a/front-end/resetPasswordView.html
+++ b/front-end/resetPasswordView.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Senseira : Sign In</title>
+    <title>Senseira : Reset Password</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link type="text/css" rel="stylesheet" href="css/reset.css"/>
     <link type="text/css" rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
@@ -37,10 +37,10 @@
     </ul>
 
     <!-- Partial view place -->
-    <div id="signInView" class="sign-in-container clearfix">
+    <div id="resetPasswordView" class="reset-password-container clearfix">
         <div class="col-md-4">
             <div class="panel panel-default">
-                <div class="panel-heading">Введите логин и пароль что бы войти:</div>
+                <div class="panel-heading">Сброс пароля:</div>
                 <div class="panel-body">
                     <form class="form-horizontal" role="form" data-bind="submit: beforeSubmit">
                         <div class="alert alert-danger activatable-element" data-bind="css: { 'active' : isValidationErrorsExists() }">
@@ -49,42 +49,19 @@
                             </ul>
                         </div>
                         <div class="form-group">
-                            <label for="loginInput" class="control-label">Логин</label>
+                            <label for="emailInput" class="control-label">Адрес электронной почты</label>
                             <div class="col-sm-12">
-                                <input type="text"
+                                <input type="email"
                                        class="form-control"
-                                       id="loginInput"
-                                       placeholder="Логин"
-                                       data-bind="value: login"/>
+                                       id="emailInput"
+                                       placeholder="Эл. почта"
+                                       data-bind="value: email"/>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="passwordInput" class="control-label">Пароль</label>
-                            <div class="col-sm-12">
-                                <input type="password"
-                                       class="form-control"
-                                       id="passwordInput"
-                                       placeholder="Пароль"
-                                       data-bind="value: password"/>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-12">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox"
-                                               data-bind="checked: rememberMe"/>
-                                        Запомнить меня
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="form-group buttons-group">
                             <div class="col-sm-3 col-xs-4 col-lg-4">
-                                <button type="submit" class="btn btn-primary">Войти</button>
-                            </div>
-                            <div class="col-sm-9 col-xs-8 col-lg-8 clearfix">
-                                <button type="button" class="btn btn-default pull-right">Восстановить пароль</button>
+                                <button type="submit" class="btn btn-primary">Сбросить пароль</button>
                             </div>
                         </div>
                     </form>
@@ -104,7 +81,7 @@
 <script type="text/javascript" src="scripts/custom/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom/initialAlerting.js"></script>
 <script type="text/javascript" src="scripts/senseira/baseForm.js"></script>
-<script type="text/javascript" src="scripts/senseira/signIn.js"></script>
+<script type="text/javascript" src="scripts/senseira/resetPassword.js"></script>
 <!-- Body script place -->
 </body>
 </html>
