--- a/front-end/outsidePasswordChangingView.html
+++ b/front-end/outsidePasswordChangingView.html
@@ -43,6 +43,8 @@
                 <div class="panel-heading">Смена пароля:</div>
                 <div class="panel-body">
                     <form class="form-horizontal" role="form" data-bind="submit: beforeSubmit">
+                        <ul id="validationErrorsList">
+                        </ul>
                         <div class="alert alert-danger activatable-element" data-bind="css: { 'active' : isValidationErrorsExists() }">
                             <ul data-bind="foreach: validationErrors">
                                 <li data-bind="text: $data"></li>
