SE-20 Implement of client-side validation of registration forms
All error messages contains in constants.js

--- a/front-end/insidePasswordChangingView.html
+++ b/front-end/insidePasswordChangingView.html
@@ -102,6 +102,7 @@
 <!-- Body script place -->
 <script type="text/javascript" src="scripts/custom/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom/initialAlerting.js"></script>
+<script type="text/javascript" src="scripts/senseira/constants.js"></script>
 <script type="text/javascript" src="scripts/senseira/baseForm.js"></script>
 <script type="text/javascript" src="scripts/senseira/insidePasswordChanging.js"></script>
 <!-- Body script place -->
