--- a/front-end/resetPasswordView.html
+++ b/front-end/resetPasswordView.html
@@ -82,6 +82,7 @@
 <!-- Body script place -->
 <script type="text/javascript" src="scripts/custom/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom/initialAlerting.js"></script>
+<script type="text/javascript" src="scripts/senseira/constants.js"></script>
 <script type="text/javascript" src="scripts/senseira/baseForm.js"></script>
 <script type="text/javascript" src="scripts/senseira/resetPassword.js"></script>
 <!-- Body script place -->
