--- a/front-end/signInView.html
+++ b/front-end/signInView.html
@@ -105,6 +105,7 @@
 <!-- Body script place -->
 <script type="text/javascript" src="scripts/custom/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom/initialAlerting.js"></script>
+<script type="text/javascript" src="scripts/senseira/constants.js"></script>
 <script type="text/javascript" src="scripts/senseira/baseForm.js"></script>
 <script type="text/javascript" src="scripts/senseira/signIn.js"></script>
 <!-- Body script place -->
