--- a/front-end/signUpView.html
+++ b/front-end/signUpView.html
@@ -165,6 +165,7 @@
 <!-- Body script place -->
 <script type="text/javascript" src="scripts/custom/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom/initialAlerting.js"></script>
+<script type="text/javascript" src="scripts/senseira/constants.js"></script>
 <script type="text/javascript" src="scripts/senseira/baseForm.js"></script>
 <script type="text/javascript" src="scripts/senseira/signUp.js"></script>
 <!-- Body script place -->
