SE-22. Implemented tree view with percentage
TODO: add more information to tree nodes, add item's values editor

--- a/front-end/moduleSystemCreatorView.html
+++ b/front-end/moduleSystemCreatorView.html
@@ -38,7 +38,9 @@
 
     <!-- Partial view place -->
     <div id="moduleSystemCreator" class="module-system-creator-container clearfix">
-        <div class="module-system-tree col-md-9"></div>
+        <div class="module-system-view-tree col-md-9">
+
+        </div>
         <div class="col-md-3">
             <div class="panel panel-default">
                 <div class="panel-heading">Информация</div>
