SE-22. Implemented tree view
• added highlighting node path
• added node name displaying
• started ko integration

TODO:
• switch to edit mode
• editor panel
• beautify less code
• apply ko bindings to tree nodes

--- a/front-end/moduleSystemCreatorView.html
+++ b/front-end/moduleSystemCreatorView.html
@@ -38,12 +38,12 @@
 
     <!-- Partial view place -->
     <div id="moduleSystemCreator" class="module-system-creator-container clearfix">
-        <div class="module-system-view-tree col-md-9">
+        <div class="module-system-view-tree col-md-12">
 
         </div>
-        <div class="col-md-3">
+        <div class="module-system-view-editor col-md-3" style="display: none;">
             <div class="panel panel-default">
-                <div class="panel-heading">Информация</div>
+                <div class="panel-heading no-selection">Информация</div>
                 <div class="panel-body"></div>
             </div>
         </div>
