--- a/front-end/moduleSystemCreatorView.html
+++ b/front-end/moduleSystemCreatorView.html
@@ -39,12 +39,42 @@
     <!-- Partial view place -->
     <div id="moduleSystemCreator" class="module-system-creator-container clearfix">
         <div class="module-system-view-tree col-md-12">
-
         </div>
-        <div class="module-system-view-editor col-md-3" style="display: none;">
-            <div class="panel panel-default">
+        <div class="module-system-view-editor" data-bind="if: editingNode">
+            <div class="panel panel-default" data-bind="with: editingNode">
                 <div class="panel-heading no-selection">Информация</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="form-group col-sm-12">
+                        <label for="nodeNameInput" class="control-label no-selection">Название</label>
+                        <input type="text"
+                               class="form-control"
+                               id="nodeNameInput"
+                               placeholder="Название"
+                               data-bind="value: name"/>
+                    </div>
+                    <div class="form-group col-sm-12">
+                        <label for="nodeDescInput" class="control-label no-selection">Описание</label>
+                        <textarea class="form-control"
+                                  rows="2"
+                                  id="nodeDescInput"
+                                  placeholder="Введите краткое описание"
+                                  data-bind="value: description"></textarea>
+                    </div>
+                    <div class="form-group col-sm-12">
+                        <label for="nodeValueInput" class="control-label no-selection">Весовой коэффициент</label>
+                        <input type="number"
+                               class="form-control"
+                               id="nodeValueInput"
+                               min="0"
+                               step="0.1"
+                               placeholder="0"
+                               data-bind="value: value"/>
+                    </div>
+                    <div class="form-group buttons-group col-sm-12 text-center">
+                        <button type="submit" class="btn btn-primary" data-bind="click: $parent.submitNodeChanges">Сохранить</button>
+                        <button type="reset" class="btn btn-danger" data-bind="click: discardChanges">Отменить</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
