SE-22. Implement module system creator page
• added confirmation dialog on tree node removal
• added node name position update on add/remove children
• changed node's empty value display

--- a/front-end/moduleSystemCreatorView.html
+++ b/front-end/moduleSystemCreatorView.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="scripts/frameworks/jquery.noty.packaged.min.js"></script>
     <script type="text/javascript" src="scripts/frameworks/d3.v3.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap/bootstrap.js"></script>
+    <script type="text/javascript" src="scripts/bootstrap/bootbox.min.js"></script>
     <script type="text/javascript" src="scripts/custom/alert.js"></script>
 </head>
 <nav class="navbar navbar-default navbar-fixed-top">
